reflect revision in abst and intro

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -53,7 +53,7 @@ Tetsuya Akita$^{a}$\thanks{
 \maketitle
 
 \begin{abstract}
-This study develops estimators of the contemporary migration number and rate of adults for iteroparous species between two populations. The proposed estimators are based on both known half-sibling (HS) and/or parent-offspring (PO) relationships observed between the populations across the breeding seasons. The rationale is that such HS and PO pairs have information as to how often parental movements during the breeding interval are realized. Our method allows for variance of the average number of offspring per parent within and between populations. In addition, coupled with PO pairs found within population, the estimators can be obtained only from genetic data. Roughly speaking, a sample size of square root of population size is required for obtaining meaningful information on migration. We also evaluate the detailed performance of the estimators by running an individual-based model, providing a guidance for sample sizes to ensure the required accuracy and precision. Furthermore, in the face of the current situation where there is little effective method for estimating adult movement especially when populations cannot be genetically distinct, we discuss the usefulness of this proposed kinship assignment method in terms of conservation biology and wildlife management.  
+In this paper, we describe the development of estimators for the contemporary migration number and rate of adults of iteroparous species between two populations. The proposed estimators are based on known half-sibling (HS) and/or parent--offspring (PO) relationships observed between the populations across breeding seasons. The rationale is that the HS and PO pairs exhibit information about the occurrence frequency of parental movements during the breeding interval. The proposed method allows for variance in the average number of offspring per parent both within and between populations. In addition, coupled with the PO pairs found within the population, the estimators can be obtained from only genetic data. Generally, a sample size representing the square root of the population size is required to obtain meaningful information regarding migration. We describe a detailed evaluation of the performance of the estimators by running an individual-based model, and the results provide guidance regarding sample sizes to ensure the required accuracy and precision. Furthermore, given that there are few effective methods to estimate adult movement (especially when populations cannot be genetically distinct), we discuss the usefulness of this proposed kinship assignment method in terms of conservation biology and wildlife management.  
 \\
 \end{abstract}
 \textbf{Key words:} dispersion; kinship assignment; reproductive potential; close-kin mark-recapture\\
@@ -91,9 +91,10 @@ This study develops estimators of the contemporary migration number and rate of 
 
 % 1: Estimating contemporary migration is important for both ecologically and evolutionally reasons
 
-In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{hampton2001spatially} and the invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
+In conservation and wildlife management, estimating current ecological information is essential for monitoring population levels and proposing effective management strategies. The contemporary migration rate, i.e., the recent rate of movement of individuals or gametes between predefined populations, is a critical component when determining the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimating the contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for more precise and flexible evaluations of management practices, e.g., stock assessment in fisheries \cite[]{hampton2001spatially} and invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
+%KOKOMADE enago%%%
 
 There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and time-varying reporting rate \cite[]{hilborn2013quantitative}. In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
 
