--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -94,19 +94,19 @@ In this paper, we describe the development of estimators for the contemporary mi
 In conservation and wildlife management, estimating current ecological information is essential for monitoring population levels and proposing effective management strategies. The contemporary migration rate, i.e., the recent rate of movement of individuals or gametes between predefined populations, is a critical component when determining the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol, https://doi.org/10.1111/j.1365-294X.2010.04688.x}. Therefore, estimating the contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for more precise and flexible evaluations of management practices, e.g., stock assessment in fisheries \cite[]{hampton2001spatially} and invasive species control \cite[]{doi:10.1146/annurev.ecolsys.32.081501.114037}. 
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
-%KOKOMADE enago%%%
 
-There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and time-varying reporting rate \cite[]{hilborn2013quantitative}. In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
+Essentially, there are two approaches to estimate the contemporary migration rate. The first approach involves using the mark-recapture (MR) method, which estimates the migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. Here, the rational is that, for example, conventional tags provide release and recovery location information for known release and recovery dates, which generates a movement fraction matrix among strata per given time interval. This direct method is relatively easy to interpret; however, it is generally hampered by several uncertainties, e.g., tag loss, tagging-related mortality, and time-varying reporting rates \cite[]{hilborn2013quantitative}. In addition, the MR method is generally limited in practice to situations where collection of a sufficient number of adult samples at multiple sites is possible over a short period. 
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 
-The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}. The model of \cite{Wilson_2003}, which is one of such population assignment methods and implemented in a software `BayesAss', can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated (e.g., $F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants. 
+The second approach involves using numerous genetic markers to assign individuals to source populations, thereby allowing the inference of recent migration \cite[since][]{https://doi.org/10.1111/j.1365-294X.1995.tb00227.x}. The previously developed model of \cite{Wilson_2003}, which is one of the population assignment methods and implemented in a software `BayesAss', can output the point estimate as an element of the current migration matrix. However, according to several papers \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of the migration rates estimated by this model is valid only when populations are highly differentiated (e.g., $F_{\rm ST}\ge0.05$), which suggests that it may be difficult to infer the degree of demographic dependency among populations because demographic independency is realized even if there are many migrants. 
 
 % 4: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 
-Parental assignments, which is based on genetic markers and often used as a complement to the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require the population differentiation \cite[]{https://doi.org/10.1111/mec.12806}. However, the current methodology focuses on estimating dispersal kernels and, for estimating migration rate, requires the assumption that adults are not migrant, e.g., pollen/seeds dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}; thus, it may not apply the adult movement of iteroparous species (i.e., multiple reproductive cycles during the lifetime) that may change the spawning ground for each breeding season. 
+Parental assignments, which are based on genetic markers and are frequently used to complement the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require population differentiation \cite[]{https://doi.org/10.1111/mec.12806}; however, the current methodology focuses on estimating dispersal kernels and, to estimate the migration rate, requires the assumption that adults are not migrant, e.g., pollen/seed dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}. Thus, this method may not consider the adult movement of iteroparous species, i.e., multiple reproductive cycles during the lifetime, which may change the spawning ground for each breeding season. 
 
 % 5: CKMR can cover the range that Mark recapture can handle with more realistic situations
+%KOKOMADE enago%%%
 
 Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[][and references therein]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in the MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information in estimating the migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, the CKMR-based migration estimation has not been well developed and rigorously examined in a simulation study. 
 
