--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -106,16 +106,15 @@ The second approach involves using numerous genetic markers to assign individual
 Parental assignments, which are based on genetic markers and are frequently used to complement the population assignment method in ecological studies, also provide information about the current level of migration. In contrast to the population assignment method, the parental assignment method does not require population differentiation \cite[]{https://doi.org/10.1111/mec.12806}; however, the current methodology focuses on estimating dispersal kernels and, to estimate the migration rate, requires the assumption that adults are not migrant, e.g., pollen/seed dispersal in plants \cite[]{doi:10.1080/07352689.2010.481167} or larval drift in marine animals \cite[]{https://doi.org/10.1111/eva.12288}. Thus, this method may not consider the adult movement of iteroparous species, i.e., multiple reproductive cycles during the lifetime, which may change the spawning ground for each breeding season. 
 
 % 5: CKMR can cover the range that Mark recapture can handle with more realistic situations
-%KOKOMADE enago%%%
 
-Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[][and references therein]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in the MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information in estimating the migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, the CKMR-based migration estimation has not been well developed and rigorously examined in a simulation study. 
+Close-kin mark-recapture (CKMR) is a recently developed method to estimate adult population size along with life-history parameters that utilizes the known kinship information in a sample \cite[][and references therein]{https://doi.org/10.1111/faf.12615}. In the CKMR method, the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in the MR method. Note that kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect the number of adults in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information to identify metapopulation structure \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}, CKMR-based migration estimation has not been well developed or examined extensively in a simulation study. 
 
 % 6: In this paper, ~
 
-In this study, we propose a new method for estimating the contemporary migration number or rate of adults between two pre-defined populations in iteroparous species, where the migration direction is specified. Assuming that kinships are genetically detected without any error, this method is based on the numbers of half-sibling (HS) and parent-offspring (PO) pairs in a sample. Sampling can be invasive or non-invasive and is completed at two breeding seasons; sampling offspring (young-of-year individuals) and parents probably shares PO relationship with sampled offspring in the one population at the first breeding season and in the another population at the second breeding season. The rationale is that the number of HS and PO pairs found between populations have information as to how often parental movements during the breeding interval are realized. Our model explicitly incorporates reproductive variation within and between populations, making it possible to target a species whose fertility is affected by environmental differences between populations. First, we explain the modeling assumption and sampling scheme. Then, we analytically determine the estimators of the contemporary migration number or rate of adults, which are based on the numbers of HS and/or PO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and provide a guide for a sample size. It is noteworthy that our modeling framework can be applied to diverse animal species. However, the description of the model focuses on fish species, which are presently the best candidate target of our proposed method.
+Thus, in this paper, we propose a method to estimate the contemporary migration number or rate of adults between two predefined populations in iteroparous species, where the migration direction is specified. Under the assumption that kinships are genetically detected without error, the proposed method is based on the numbers of half-sibling (HS) and parent--offspring (PO) pairs in a sample. Here, sampling can be either invasive or noninvasive and is completed at two breeding seasons; sampling offspring (young-of-year individuals) and parents likely share a PO relationship with the offspring sampled in one population at the first breeding season and in the other population at the second breeding season. The rationale for estimating the migration number or rate is that the number of HS and PO pairs found between populations contains information about the frequency of parental movements during the breeding interval. Our model explicitly incorporates reproductive variation within and between populations, thereby making it possible to target a species whose fertility is affected by environmental differences between populations. First, we explain the modeling assumption and sampling scheme. Then, we analytically determine the estimators of the contemporary migration number or rate of adults, which are based on the numbers of HS and/or PO pairs. Finally, by running an individual-based model, we investigate the performance of the estimator and provide a guide for a sample size. Note that the proposed modeling framework can be applied to diverse animal species; however, the description of the model focuses on fish species, which are presently the best target candidate for the proposed method.
 
 \section{Theory}\label{sec2}
-In this section, we present the theoretical foundation for estimating a migrant number and migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix 2}), here we assume a relatively simple situation for explanation purposes. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
+Here, we present the theoretical foundation of estimating a migrant number and migration rate of iteroparous species using HS or PO pairs found between two populations with different sample timing. Note that the estimators can hold under flexible assumptions for reproduction ({\bf Appendix 2}); however, here, we assume a relatively simple case. The main symbols used in this paper are summarized in {\bf Table \ref{symbols}}. 
 
 %%%%%%%%%%%%%%
 \begin{center}
@@ -125,9 +124,9 @@ In this section, we present the theoretical foundation for estimating a migrant 
 
 \subsection{Hypothetical population}
 
-Suppose that we have a set of two populations labelled 1 and 2 where random mating occurs within each population and that parents can move to the other population after the end of the reproductive season. Hereafter, without loss of generality, we consider the movement of parents in the direction from the population 1 to the population 2 and focus on the migration number or rate, and that is what we attempt to estimate. In this framework, we show that considering two reproductive seasons (hereafter, we call them "the first year" and "the second year") is enough to estimate it. {\bf Figure \ref{cartoon}a} presents a schematic representation of the kinship relationships and movements of parents. 
+Assume that we have a set of populations 1 and 2, where random mating occurs within each population and parents can move to the other population after the reproductive season ends. Without loss of generality, we consider the movement of parents from population 1 to population 2, and we focus on estimating the migration number or rate. In this framework, we demonstrate that considering two reproductive seasons (hereafter referred to as "the first year" and "the second year") is sufficient to estimate the migration number or rate. {\bf Figure \ref{cartoon}a} shows a schematic representation of the kinship relationships and parent movements. 
 
-Suppose there are $N_1$ parents in the population 1 at the beginning of the first year. Each parent produces offspring in which the number is governed by the parent's reproductive potential, denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, part of the parents would start to moving towards the population 2; $M$ survived migrants arrive in the population 2 so that there are $N_2$ parents in the population 2 at the beginning of the second year ($M \le N_1$ and $M \le N_2$). Similar to the population 1, $N_2$ parents produce offspring in which the number is governed by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). The reproductive potential is determined by several factors and its details are summarized in {\bf Appendix 1}; theoretically speaking, the number of offspring for each parent is set as a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
+Assume that there are $N_1$ parents in population 1 at the beginning of the first year. Each parent produces a number of offspring that is governed by the parent's reproductive potential, which is denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, some parents begin to move toward population 2. Here $M$ survived migrants arrive in population 2; thus, there are $N_2$ parents in population 2 at the beginning of the second year ($M \le N_1$ and $M \le N_2$). Similar to population 1, $N_2$ parents produce a number of offspring governed by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). Note that reproductive potential is determined by several factors. Additional details about reproductive potential can be found in {\bf Appendix 1}. Theoretically, the number of offspring for each parent is set as a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
 
 %%%%%%%%%%%%%%
 \begin{center}
@@ -137,43 +136,42 @@ Suppose there are $N_1$ parents in the population 1 at the beginning of the firs
 
 \subsection{Sampling}
 
-To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled in the first and second year, respectively, which are identified as young-of-year individuals without errors. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled even in the same year. It should be noted that all the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation, as explained later. Up to the subsection 2.6, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. {\bf Figure~\ref{cartoon}b} illustrates a timeline of sampling scheme for hypothetical populations. 
+To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are sampled randomly in the first and second year, respectively, which are identified as young-of-year individuals without error. In addtion, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are sampled randomly immediately after the end of the reproductive season in the first and second years, respectively. For mathematical tractability, the parents must survive the reproductive season; therefore, both the mother and father of a give offspring have the potential to be sampled in the same year. Note that all the four sample types, i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$, are not always required to estimate the migration number or rate. The types of required samples depends on the given situation, which is explained later. Up to subsection 2.6, we focus on only the HS and PO pairs found between populations 1 and 2. To apply the proposed method to the fishery assessment, we assume an invasive sampling procedure, which prevents us from finding a PO pair such that a parent and offspring is sampled in population 1 and 2, respectively. {\bf Figure~\ref{cartoon}b} shows the timeline of the sampling scheme for these hypothetical populations. 
 
-In the example depicted in {\bf Fig~\ref{cartoon}a}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explained in the following section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). 
+In the example shown in {\bf Fig.~\ref{cartoon}a}, five offspring and four parents are sampled in population 1, four offspring and six parents are sampled in population 2, and two HS pairs and a single PO pair are observed between the two populations 1 and 2. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, which is explained in subsection 2.7. In our modeling framework, if a full-sibling relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined via pairwise comparison of all the sample individuals, i.e., comparisons of $n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$, respectively. 
 
 \subsection{HS pair-based model}
 
-Here, we consider the probability that two offspring sampled in the population 1 and 2 share an HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. For the explanation purpose, we assume equal reproductive potential among parents up to the subsection 2.7, although this assumption can be relaxed for most of the case (see details in {\bf Appendix 2}). $\pi_{\rm HS, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a parent that safely arrives in the population 2 (hereafter, called "migrant"); (ii) the probability that sampled offspring in the population 2 born to a migrant; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant of a sampled offspring in the population 2 are identical. 
+Here, we consider the probability that two offspring sampled in populations 1 and 2 will share an HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. Note that we assume equal reproductive potential among parents (up to subsection 2.7) although this assumption can be relaxed for most of the case (see {\bf Appendix 2} for additional information). Here, $\pi_{\rm HS, bet}$ can be partitioned into three probabilities, i.e., (i) the probability that sampled offspring in population 1 born to a parent that safely arrives in population 2 (hereafter, referred to as a "migrant"); (ii) the probability that sampled offspring in population 2 are born to a migrant; and (iii) the probability that the migrant of a sampled offspring in population 1 and the migrant of a sampled offspring in population 2 are identical. 
 
-To assess these probabilities, recall there must be two parents of arbitral offspring; the first probability is the sum of father-offspring and mother-offspring relationship, which can be written by $r_{\rm M}M/(r_{\rm S,1}N_{1}) + (1 - r_{\rm M})M/((1-r_{\rm S,1})N_{1})$, where $r_{\rm M}$ and $r_{\rm S,1}$ indicates sex ratio of parents in the migrants and in the whole of the population 1, respectively. Assuming $r_{\rm M} = r_{\rm S,1}$, the probability is simplified as $2M/N_{1}$. Similarly, the second probability is simplified as $2M/N_{2}$, implying the assumption of equal sex ratio in the migrants and the others. The third probability corresponds to the probability that randomly selected two migrants are identical, that is $1/M$. Taken together, we obtain
+To assess these probabilities, recall that there must be two parents of arbitral offspring. The first probability is the sum of the father--offspring and mother--offspring relationship, which can be expressed as $r_{\rm M}M/(r_{\rm S,1}N_{1}) + (1 - r_{\rm M})M/((1-r_{\rm S,1})N_{1})$, where $r_{\rm M}$ and $r_{\rm S,1}$ indicate the sex ratio of the parents in the migrants and in all of the population 1, respectively. Under the assumption that $r_{\rm M} = r_{\rm S,1}$, the probability is simplified to $2M/N_{1}$. Similarly, the second probability is simplified to $2M/N_{2}$, which implies the assumption regarding an equal sex ratio in migrants and others. The third probability corresponds to the probability that two randomly selected migrants are identical, i.e., $1/M$. Taken together, we obtain the following: 
 \begin{align}
 \pi_{\rm HS,bet} &= \frac{2M}{N_{1}} \frac{2M}{N_{2}} \frac{1}{M} \nonumber\\
 &= \frac{4M}{N_{1}N_{2}}.
 \label{HS-1}
 \end{align}
-This form holds under a flexible setting for the reproductive potential, such as a situation with random variable of $\lambda_{i,1}$ and $\lambda_{j,2}$, as noted in {\bf Appendix 2}. If all $N_1$ parents safely move to the population 2 (i.e., $M = N_1$), $\pi_{\rm HS,bet}$ equals $4/N_2$; meanwhile, if the population 2 consists only of migrants (i.e., $M = N_2$), $\pi_{\rm HS,bet}$ equals $4/N_1$. These probabilities in the extreme cases are similar forms to HS probability that is randomly sampled from two different cohorts within a population \cite[]{bravington2016close}. 
+This form holds under a flexible setting for the reproductive potential, e.g., a situation with random variable of $\lambda_{i,1}$ and $\lambda_{j,2}$ ({\bf Appendix 2}). If all $N_1$ parents safely move to population 2 (i.e., $M = N_1$), $\pi_{\rm HS,bet}$ equals $4/N_2$. In addition, if population 2 comprises only migrants (i.e., $M = N_2$), $\pi_{\rm HS,bet}$ equals $4/N_1$. In extreme cases, these probabilities take similar forms as the HS probability, which is sampled randomly from two different cohorts within a population \cite[]{bravington2016close}. 
 
-Let $H_{\rm HS,bet}$ be the number of HS pairs found in offspring samples of size $n_{\rm O, 1}$ and $n_{\rm O, 2}$. Assuming that the total number of HS pairs in the population is much higher than $H_{\rm HS,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm HS,bet} \sim {\rm Binom}[\pi_{\rm HS,bet}, n_{\rm O, 1} n_{\rm O, 2}]$); thus, the theoretical expectation of $H_{\rm HS,bet}$ is
-
+Let $H_{\rm HS,bet}$ be the number of HS pairs found in the offspring samples of size $n_{\rm O, 1}$ and $n_{\rm O, 2}$. Assuming the total number of HS pairs in the population is much greater than $H_{\rm HS,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm HS,bet} \sim {\rm Binom}[\pi_{\rm HS,bet}, n_{\rm O, 1} n_{\rm O, 2}]$). Thus, the theoretical expectation of $H_{\rm HS,bet}$ is given as follows: 
 \begin{align}
 \mathbb{E}[H_{\rm HS, bet}] &= \pi_{\rm HS,bet} n_{\rm O, 1} n_{\rm O, 2} \nonumber\\
 &= \frac{ 4 n_{\rm O, 1} n_{\rm O, 2} M } { N_{1} N_{2} } \label{HS-2-1}\\
 &= \frac{ 4 n_{\rm O, 1} n_{\rm O, 2} m } { N_{2} },
 \label{HS-2-2}
 \end{align}
-where $m$ indicates the migration rate satisfying $M = mN_{1}$. The observed number of HS pairs in a sample found between the two populations is defined by $\widetilde{H}_{\rm HS, bet}$, and $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-1} is replaced by $\widetilde{H}_{\rm HS, bet}$, generating the linear estimator of $M$:
+where $m$ is the migration rate satisfying $M = mN_{1}$. The observed number of HS pairs in a sample found between the populations 1 and 2 is defined by $\widetilde{H}_{\rm HS, bet}$, and $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-1} is replaced by $\widetilde{H}_{\rm HS, bet}$, thereby generating the linear estimator of $M$:
 
 \begin{align}
 \widehat{M_1} &= \frac{N_{1} N_{2} \widetilde{H}_{\rm HS, bet} } {4 n_{\rm O, 1} n_{\rm O, 2} }.
 \label{HS-3}
 \end{align}
-In this paper, a ``tilde'' and ``hat'' indicates the observation and estimator of a variable, respectively. Similarly, $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-2} is replaced by $\widetilde{H}_{\rm HS, bet}$, generating the linear estimator of $m$:
+In this paper, a ``tilde'' and ``hat'' symbols indicates the observation and estimator of a variable, respectively. Similarly, $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-2} is replaced by $\widetilde{H}_{\rm HS, bet}$, which generates the linear estimator of $m$:
 
 \begin{align}
 \widehat{m_1} &= \frac{N_{2} \widetilde{H}_{\rm HS, bet} } {4 n_{\rm O, 1} n_{\rm O, 2} }
 \label{HS-4}
 \end{align}
-Subscription of these estimators indicates the numbering of proposed estimators appeared in this paper, which is summarized in Table \ref{parameter}. 
+The subscripts associated with these estimators indicate the numbering of the proposed estimators, which is summarized in Table \ref{parameter}. 
 
 %%%%%%%%%%%%%%
 \begin{center}
@@ -181,6 +179,7 @@ Subscription of these estimators indicates the numbering of proposed estimators 
 \end{center}
 %%%%%%%%%%%%%%
 
+%KOKOMADE enago%%%
 \subsection{PO pair-based model}
 
 Next, we consider the probability that offspring sampled in the population 1 and a parent sampled in the population 2 share an PO relationship, denoted by $\pi_{\rm PO, bet}$. $\pi_{\rm PO, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a migrant; (ii) the probability that a migrant is sampled; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant sampled in the population 2 are identical. The first and third probabilities are the same as the one introduced in the previous subsection, that is, $2M/N_{1}$ and $1/M$. The second probability is $M/N_{2}$ by definition. Taken together, we obtain
