--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -219,7 +219,7 @@ and
 n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }.
 \label{RS-2}
 \end{align}
-Generally, the required sample size to ensure the above conditions is $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. Noted that a very small $m$ value, which dramatically increases the required sample size, produces significant genetic differences between the two populations. In such cases, there are several methods to estimate migration rate using population genetics technique. Alternatively, we focus on moderate/large migration rate, which yields little genetic differences between the two populations. 
+Generally, the required sample size to ensure the above conditions is $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. Note that a very small $m$ value, which dramatically increases the required sample size, produces significant genetic differences between the two populations. In such cases, there are several methods to estimate migration rate using population genetics technique. Alternatively, we focus on moderate/large migration rate, which yields little genetic differences between the two populations. 
 
 Other guidance for the required sample size is obtained by an approximate lower bound on the coefficient of variation (CV) of $M_1$ or $m_1$, which is defined as $1/\sqrt{H_{\rm HS, bet}}$. This is applied in the context of classic MR \cite[]{seber1982estimation} or CKMR \cite[]{bravington2016close}. For example, to achieve a 30\% CV, the target of $H_{\rm HS, bet}$ is greater than 10, thereby providing the required sample size when the population parameters are given (e.g., $N_1$, $N_2$, and $M$). Similarly, the CV of $M_2$ or $m_2$, defined by $1/\sqrt{H_{\rm PO, bet}}$, provides the sample size required to estimate $M_2$ or $m_2$. 
 
@@ -307,7 +307,7 @@ In this study, we theoretically developed estimators for the contemporary migrat
 
 Our primary contributions are summarized as follows. First, we formulated the probabilities of kinship pairs randomly selected between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provides migration number or rate estimators. While similar derivations may be found in the (nongenetic) MR method, these are limited to cases where sampling is non-invasive and adult individuals are sampled. The proposed method can avoid these limitations, where such an advantages is characterized by the CKMR method for estimating population sizes. Second, we have demonstrated that the probabilities of kinship pairs are approximately independent of the reproductive potential; thus, information about it is not required to realize the estimation provided that migration is assumed to occur independently of the reproductive potential. This is a useful property of the estimators because it is natural that heterogeneity of reproductive potential within and between populations exits in iteroparous species but its observation is generally difficult. Third, we have demonstrated that estimators can be obtained using only genetic data (i.e., ${\hat M_5}$ and ${\hat m_4}$). There are several advantages in using the proposed estimator rather than estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) separately (via a genetic method) and $N_1$ (and/or $N_2$) (via a nongenetic method), including simplified sampling processes and analyzing designs and the availability of a unified framework of genetic analyses for detecting HS and PO pairs (similar discussion is found for estimating the ratio of effective breeding size to the census size, $N_{\rm b}/N$, in \cite{Akita_2020}). 
 
-To estimate the contemporary migration number or migration rate, our simulation-based results provide sample size guidance to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). For example, when $m=0.1$ and $N_1=N_2=10^3$, sampling 10\% and 20\% of the parents and an equal number of offspring in both populations leads to 70\% and 39\% CV of ${\hat M_5}$, respectively (in the invasive sampling case). Even no information is available about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. In addition, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project ($n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$; refer to Equations~\ref{RS-1} and \ref{RS-2}). Noted that the guidance is to estimate the information about one-way migration between two populations; thus, estimating two-way migrations among two or three populations would require twice and three times the number of samples, respectively, compared to our sample size guidance. 
+To estimate the contemporary migration number or migration rate, our simulation-based results provide sample size guidance to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). For example, when $m=0.1$ and $N_1=N_2=10^3$, sampling 10\% and 20\% of the parents and an equal number of offspring in both populations leads to 70\% and 39\% CV of ${\hat M_5}$, respectively (in the invasive sampling case). Even no information is available about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. In addition, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project ($n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$; refer to Equations~\ref{RS-1} and \ref{RS-2}). Note that the guidance is to estimate the information about one-way migration between two populations; thus, estimating two-way migrations among two or three populations would require twice and three times the number of samples, respectively, compared to our sample size guidance. 
 
 We believe there are several scenarios where the proposed estimator may be beneficial. The first case is where there is a large number of migrants between populations, e.g., $M>100$, which eliminates population differentiation and thus hampers the detection of the $M$ via population genetics method if $M$ is interpreted as an effective migration number. Information about movement between populations is essential to assess population dynamics in the conservation and management contexts, even if the migrant number is so large that it cannot be genetically assigned to two populations. The second case involves genetic monitoring conducted for each reproductive period (e.g., annually) because the proposed estimators consider information about contemporary migration that is explicitly specified the timing (e.g., year); thus, the time-series data for migration may reflect environmental changes, and this would provide insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provide $N_{\rm b}$ \cite[]{wang2009new,WAPLES_2011}, which is also used to assess genetic health. The third is the case involves the development of integrated models that combine several data sources into a single analysis \cite[]{MAUNDER201361}. An example of this direction is to provide additional information about migration to ongoing CKMR projects for stock assessment in fisheries \cite[e.g.,][]{Bravington_2016,Hillary_2018,https://doi.org/10.1002/ece3.6296,ecolevol2021p,10.1093/icesjms/fsac002}, which would utilize kinship pairs for simultaneous estimation of population parameters. If the population structure is defined hypothetically, the data accumulated in such projects could be readily connected to our theory via likelihood methods. The fourth case is where sampling adults is difficult due to conservation practices or other reasons but instead sampling offspring is relatively easy. In such cases, although $N_2$ (and $N_1$) must be given externally to employ $\hat m_1$ (and $\hat M_1$), there is presently no existing method to estimate adult movement, especially when two populations cannot be genetically distinct, which indicates that the proposed method has the potential to expand the scope of current population monitoring techniques. 
 
@@ -421,9 +421,9 @@ No datasets were generated or analyzed in this study.
 
 %KOKOMADE enago%%%
 
-\newcommand{\figcapa}{(a) Hypothetical populations with $N_{1}=16$, $N_{2}=14$, and $M=6$. Upper and lower square indicates individuals belonging to the population 1 before migration (at sample timing in the first year) and individuals belonging to the population 2 after reproduction (at sample timing in the second year), respectively. The open circles on the left side, right side, and the center represent mothers, fathers, and their offspring, respectively. The thin line denotes parent-offspring relationship. The bold arrow denotes the migration and the symbol x denotes a failure to survive at sampling in the second year. Sampled individuals are labeled with an index number. The number of sampled individuals in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$; the numbers of kinship pairs: $H_{\rm PO, bet}=1$ (i.e., ``7-10'' pair), $H_{\rm HS, bet}=2$ (i.e., ``8-16'' and ``9-16'' pairs), $H_{\rm PO, 1}=3$ (i.e., ``1-6'', ``3-5'' and ``4-7'' pairs), and $H_{\rm PO, 2}=2$ (i.e., ``11-17'' and ``15-16'' pairs). (b) The phases of the events relevant to this study along the time line.}
+\newcommand{\figcapa}{(a) Hypothetical populations with $N_{1}=16$, $N_{2}=14$, and $M=6$. Upper and lower areas indicate individuals in population 1 before migration (at the sample timing in the first year) and individuals in population 2 after reproduction (at the sample timing in the second year), respectively. Open circles on the left, right, and center represent mothers, fathers, and their offspring, respectively. The thin line denotes PO relationship. Bold arrows denote migration, and x denotes failure to survive at the sampling in the second year. Sampled individuals are labeled with an index number. Number of sampled individuals in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$; numbers of kinship pairs: $H_{\rm PO, bet}=1$ (i.e., ``7-10'' pair), $H_{\rm HS, bet}=2$ (i.e., ``8-16'' and ``9-16'' pairs), $H_{\rm PO, 1}=3$ (i.e., ``1-6'', ``3-5'' and ``4-7'' pairs), and $H_{\rm PO, 2}=2$ (i.e., ``11-17'' and ``15-16'' pairs). (b) Phases of events relevant to this study in the given timeline.}
 
-\newcommand{\figcapb}{Violin plots showing the distribution of relative bias in our estimator of $M$ for various values sample sizes, parent numbers and migration rate. Filled circles represent the mean values. Sample sizes for parents and offspring are identical (i.e., $n=n_{\rm P,1}=n_{\rm P,2}=n_{\rm O,1}= n_{\rm O,2}$) and parent sizes in the two populations are also identical (i.e., $N=N_1=N_2$), which are indicated in the legend. Migration rate $m$ is specified by $N_1/M$. For the demonstration purposes, the upper side of the distribution is truncated, although the mean values are calculated including the truncated values. }
+\newcommand{\figcapb}{Violin plots showing the distribution of relative bias in the estimator of $M$ for various sample sizes, parent numbers, and migration rates. Filled circles represent mean values. The sample sizes for parents and offspring are identical (i.e., $n=n_{\rm P,1}=n_{\rm P,2}=n_{\rm O,1}= n_{\rm O,2}$), and the parent sizes in the two populations are identical (i.e., $N=N_1=N_2$), as indicated in the legend. Migration rate $m$ is specified by $N_1/M$. For demonstration purposes, the upper side of the distribution is truncated, although the mean values are calculated (including the truncated values). }
 
 %%%FIGURE 1%%%
 \begin{figure}[!h]
@@ -456,23 +456,23 @@ No datasets were generated or analyzed in this study.
 \section*{Reproductive potential}
 
 \renewcommand{\theequation}{A\arabic{equation}}
-Here, we introduce the concept of the reproductive potential of parent $i$ and $j$ in the population 1 and 2, respectively, which are defined as the expected number of surviving offspring at sampling time, denoted by $\lambda_{i,1}$ and $\lambda_{j,2}$ ($i=1, \ldots, N_1$ and $j=1, \ldots, N_2$). The reproductive potential is determined by several factors, including the parent's age, weight, residence time on the spawning ground. It should be noted that the magnitude of this parameter includes information about the survival rate of the offspring, the number of days after egg hatching, and the egg number; this implies that the parameter reflects the sample timing. It should also be noted that the modeling framework does not depend on whether the reproductive potential is heritable or not.
+Here, we introduce the concept of the reproductive potentials of parents $i$ and $j$ in the population 1 and 2, respectively, which are defined as the expected number of surviving offspring at the given sampling time, denoted by $\lambda_{i,1}$ and $\lambda_{j,2}$ ($i=1, \ldots, N_1$ and $j=1, \ldots, N_2$). Reproductive potential is determined by several factors, including the parent age, weight, and residence time in the spawning ground. Note that the magnitude of this parameter includes information about offspring survival rate, the number of days after egg hatching, and the number of eggs. This implies that the parameter reflects the sample timing. Also note that the modeling framework does not depend on whether the reproductive potential is heritable or not.
 
 \section*{APPENDIX 2}
 \section*{Derivation of Equations~\ref{HS-1} and \ref{PO-1} when reproductive potential is variable among parents}
 
-In the main text, we ignore the variation of reproductive potential among parents (i.e., both $\lambda_{i,1}$ and $\lambda_{j,2}$ are constant) to derive $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$. Let $k_{i,1}$ and $k_{j,2}$ be the number of surviving offspring of parent $i$ and $j$ at sampling in the population 1 and 2, respectively, and $k_{i,1}$ and $k_{j,2}$ is assumed to follow a kind of discrete distribution (e.g., negative binomial distribution) with mean $\lambda_{i,1}$ and $\lambda_{j,2}$. Without loss of generality, we set the index such that parents with $i=1$ to $M$ in the population 1 and $j=1$ to $M$ in the population 2 are identical migrants; for example, the parent with $i=1$ reproduce $k_{1,1}$ offspring (in the population 1) and then reproduce $k_{1,2}$ offspring (in the population 2) after migration. Giving $k_{i,1}$ and $k_{j,2}$, the conditional probability that two offspring sampled in the population 1 and 2 share an HS relationship is
+In the main text, we ignore the variation of reproductive potential among parents (i.e., both $\lambda_{i,1}$ and $\lambda_{j,2}$ are constant) to derive $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$. Here, let $k_{i,1}$ and $k_{j,2}$ be the number of surviving offspring of parents $i$ and $j$ at sampling time in populations 1 and 2, and assumed to follow a kind of discrete distribution (e.g., Poisson or negative binomial distribution) with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, respectively. Without loss of generality, we set the index such that parents with $i=1$ to $M$ in population 1 and $j=1$ to $M$ in population 2 are identical migrants. For example, the parent with $i=1$ reproduces $k_{1,1}$ offspring (in population 1) and then reproduce $k_{1,2}$ offspring (in population 2) after migration. Given $k_{i,1}$ and $k_{j,2}$, the conditional probability that two offspring sampled in populations 1 and 2 share an HS relationship is expressed as follows: 
 \begin{align}
 \pi_{\rm HS,bet} | _{\boldsymbol{k_1, k_2}} &= \frac{ 2\sum_{i=1}^M k_{i,1} } { \sum_{i=1}^{N_1} k_{i,1} } \frac{ 2\sum_{j=1}^M k_{j,2} } { \sum_{j=1}^{N_2} k_{j,2} } \frac{1}{M}, 
 \end{align}
-where $\boldsymbol{k_1}=(k_{1,1}, \ldots, k_{M,1}, \ldots, k_{N_1,1})$ and $\boldsymbol{k_2}=(k_{1,2}, \ldots, k_{M,2}, \ldots, k_{N_2,2})$. It should be noted that $k_{i,1}$ and $k_{j,1}$ is a random variable with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, respectively. By taking the expectation over the distribution of offspring number, the conditional probability is approximately given by
+where $\boldsymbol{k_1}=(k_{1,1}, \ldots, k_{M,1}, \ldots, k_{N_1,1})$ and $\boldsymbol{k_2}=(k_{1,2}, \ldots, k_{M,2}, \ldots, k_{N_2,2})$. Note that $k_{i,1}$ and $k_{j,1}$ are a random variables with mean $\lambda_{i,1}$ and $\lambda_{j,2}$, respectively. By taking the expectation over the distribution of the offspring number, the conditional probability is given approximately as follows:
 \begin{align}
 \pi_{\rm HS,bet} | _{\boldsymbol{\lambda_1, \lambda_2}} &= \mathbb{E}[\pi | _{\boldsymbol{k_1, k_2}}] \nonumber\\
 &= \frac{4}{M} \mathbb{E}\left[\frac{ \sum_{i=1}^M k_{i,1} } { \sum_{i=1}^{N_1} k_{i,1} } \frac{ \sum_{j=1}^M k_{j,2} } { \sum_{j=1}^{N_2} k_{j,2} } \right]   \nonumber\\
 &\approx \frac{4}{M} \frac{ \mathbb{E}\left[ \sum_{i=1}^M k_{i,1} \sum_{j=1}^M k_{j,2} \right] } {\mathbb{E}\left[ \sum_{i=1}^{N_1} k_{i,1} \sum_{j=1}^{N_2} k_{j,2}\right]} \nonumber\\
 &= \frac{4}{M} \frac{ \sum_{i=1}^M \lambda_{i,1} \sum_{j=1}^M \lambda_{j,2} } {\sum_{i=1}^{N_1} \lambda_{i,1} \sum_{j=1}^{N_2} \lambda_{j,2}},
 \end{align}
-where $\boldsymbol{\lambda_1}=(\lambda_{1,1}, \ldots, \lambda_{M,1}, \ldots, \lambda_{N_1,1})$ and $\boldsymbol{\lambda_2}=(\lambda_{1,2}, \ldots, \lambda_{M,2}, \ldots, \lambda_{N_2,2})$. From the second to the third line, we use the approximation that $\mathbb{E}[g1(k)/g2(k)] \approx \mathbb{E}[g_1(k)] / \mathbb{E}[g_2(k)]$. From the third to the forth line, we use the relationship that $\mathbb{E}[k_{i,1}k_{j,2} | _{\lambda_{i,1}, \lambda_{j,2}}] = \mathbb{E}[k_{i,1}|_{\lambda_{i,1}}]\mathbb{E}[k_{j,2}|_{\lambda_{j,2}}]$, implying statistical independence of offspring number before and after parental movement. In other words, the conditional probability does not affected by $\mathbb{V}[k|_\lambda]$. We assume that $\lambda_{i,1}$ and $\lambda_{j,2}$ is also a random variable followed by an arbitral function with mean ${\bar \lambda_{1}}$ and ${\bar \lambda_{2}}$, respectively. By taking the expectation over $\lambda$ and applying a similar approximation, the unconditional probability is given by
+where $\boldsymbol{\lambda_1}=(\lambda_{1,1}, \ldots, \lambda_{M,1}, \ldots, \lambda_{N_1,1})$ and $\boldsymbol{\lambda_2}=(\lambda_{1,2}, \ldots, \lambda_{M,2}, \ldots, \lambda_{N_2,2})$. From the second to third lines, we use the approximation that $\mathbb{E}[g1(k)/g2(k)] \approx \mathbb{E}[g_1(k)] / \mathbb{E}[g_2(k)]$. From the third to forth lines, we use the relationship that $\mathbb{E}[k_{i,1}k_{j,2} | _{\lambda_{i,1}, \lambda_{j,2}}] = \mathbb{E}[k_{i,1}|_{\lambda_{i,1}}]\mathbb{E}[k_{j,2}|_{\lambda_{j,2}}]$, which implies the statistical independence of the offspring number before and after parental movement. In other words, the conditional probability is not affected by $\mathbb{V}[k|_\lambda]$. Here, we assume that $\lambda_{i,1}$ and $\lambda_{j,2}$ are also random variables that are followed by an arbitrary function with mean ${\bar \lambda_{1}}$ and ${\bar \lambda_{2}}$, respectively. By taking the expectation over $\lambda$ and applying a similar approximation, the unconditional probability is given as follows:
 \begin{align}
 \pi_{\rm HS,bet} &= \mathbb{E}[\pi | _{\boldsymbol{\lambda_1, \lambda_2}}] \nonumber\\ 
 &= \frac{4}{M} \mathbb{E}\left[\frac{ \sum_{i=1}^M \lambda_{i,1} } { \sum_{i=1}^{N_1} \lambda_{i,1} } \frac{ \sum_{j=1}^M \lambda_{j,2} } { \sum_{j=1}^{N_2} \lambda_{j,2} } \right]   \nonumber\\
@@ -481,13 +481,13 @@ where $\boldsymbol{\lambda_1}=(\lambda_{1,1}, \ldots, \lambda_{M,1}, \ldots, \la
 &= \frac{4M}{N_{1}N_{2}},
 \label{App2}
 \end{align}
-which provides the same formulation described in Eq.\ref{HS-1}. It should be noted that, from the third to the forth line, we assume that $\lambda_{l,1}$ and $\lambda_{l,2}$ ($l = 1, \ldots, M$) are independent variables (i.e., $\mathbb{E}[\lambda_{l,1}\lambda_{l,2}] = {\bar \lambda_{1}}{\bar \lambda_{2}}$), implying variable reproductive potential of an identical parent before and after migration. 
+which provides the same formulation described in Eq.\ref{HS-1}. Note that, from the third to forth lines, we assume that $\lambda_{l,1}$ and $\lambda_{l,2}$ ($l = 1, \ldots, M$) are independent variables (i.e., $\mathbb{E}[\lambda_{l,1}\lambda_{l,2}] = {\bar \lambda_{1}}{\bar \lambda_{2}}$), which implies variable reproductive potential of an identical parent before and after migration. 
 
-Next, we derive the probability that offspring sampled in the population 1 and a parent sampled in the population 2 share an PO relationship ($\pi_{\rm PO,bet}$) under the flexible settings of $\lambda$, which is similar to the derivation of $\pi_{\rm HS,bet}$. The conditional probability is given by
+Next, we derive the probability that offspring sampled in population 1 and a parent sampled in population 2 share a PO relationship ($\pi_{\rm PO,bet}$) under the flexible settings of $\lambda$, which is similar to the derivation of $\pi_{\rm HS,bet}$. The conditional probability is expressed as follows:
 \begin{align}
 \pi_{\rm PO,bet} | _{\boldsymbol{k_1, k_2}} &= \frac{ 2\sum_{i=1}^M k_{i,1} } { \sum_{i=1}^{N_1} k_{i,1} } \frac{ \sum_{j=1}^M k_{j,2} } { \sum_{j=1}^{N_2} k_{j,2} } \frac{1}{M}.
 \end{align}
-By taking the expectation over $k$ and $\lambda$, in the same manner as noted above, the unconditional probability is approximately given by
+Here, by taking the expectation over $k$ and $\lambda$, in the same manner as noted above, the unconditional probability is approximately given as follows:
 \begin{align}
 \pi_{\rm PO,bet} &= \mathbb{E}[\mathbb{E}[\pi | _{\boldsymbol{k_1, k_2}}]] \nonumber\\ 
 &\approx  \frac{2M}{N_{1}N_{2}},
@@ -496,15 +496,15 @@ which provides the same formulation described in Eq.\ref{PO-1}.
 
 \section*{APPENDIX 3}
 
-\section*{Difference in reproductive potential between migrants and non-migrants}
+\section*{Difference in reproductive potential between migrants and nonmigrants}
 
-In the process of the derivation of $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$ in {\bf APPENDIX 2}, we ignore covariation between migration and reproductive potential. Here, we consider the situation in which migrants have a distinguishable distribution of reproductive potential from non-migrant parents. Let $\lambda_{i,1}$, $\lambda_{j,2}$, $\lambda_{M,l,1}$ and $\lambda_{M,l,2}$ be a reproductive potential of non-migrant in the population 1 and 2 and migrants in the population 1 and 2 with mean ${\bar \lambda_{1}}$, ${\bar \lambda_{2}}$, ${\bar \lambda_{M,1}}$ and ${\bar \lambda_{M,2}}$, respectively. Under this setting, $\pi_{\rm HS,bet}$ can be written by
+In the derivation of $\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$ in {\bf Appendix 2}, we ignored covariation between migration and reproductive potential. Here, we consider the case where migrants have a distinguishable distribution of reproductive potential from nonmigrant parents. Let $\lambda_{i,1}$, $\lambda_{j,2}$, $\lambda_{M,l,1}$ and $\lambda_{M,l,2}$ be the reproductive potential of nonmigrant parents in population 1 and 2 and migrants in the populations 1 and 2 with mean ${\bar \lambda_{1}}$, ${\bar \lambda_{2}}$, ${\bar \lambda_{M,1}}$, and ${\bar \lambda_{M,2}}$, respectively. Under this setting, $\pi_{\rm HS,bet}$ can be expressed as follows:
 \begin{align}
 \pi_{\rm HS,bet} &\approx \frac{4}{M}  \frac{ \mathbb{E}\left[ \sum_{l=1}^M \lambda_{M,l,1} \sum_{l=1}^M \lambda_{M,l,2} \right]} {\mathbb{E}\left[ \left(\sum_{l=1}^{M} \lambda_{M,l,1} + \sum_{i=M+1}^{N_1} \lambda_{i,1}\right) \left(\sum_{l=1}^{M} \lambda_{M,l,2} + \sum_{j=M+1}^{N_2} \lambda_{j,2}\right) \right] }\nonumber\\ 
 &= \frac{4}{M} \frac{ M^2 {\bar \lambda_{M,1}} {\bar \lambda_{M,2}} } { \left( M {\bar \lambda_{M,1}} + (N_1 - M) {\bar \lambda_1} \right) \left( M {\bar \lambda_{M,2}} + (N_2 - M) {\bar \lambda_2} \right)}.
 \label{App3}
 \end{align}
-If ${\bar \lambda_{M,1}} = {\bar \lambda_{1}}$ and ${\bar \lambda_{M,2}} = {\bar \lambda_{2}}$, Eq.~\ref{App3} reduces to Eq.\ref{App2}. This formulation include reproductive potential terms, so that distinct reproductive potential between migrants and non-migrants vanishes the usefulness from proposed HS-based estimators (this is also applied to PO-based estimators proposed in this paper). 
+If ${\bar \lambda_{M,1}} = {\bar \lambda_{1}}$ and ${\bar \lambda_{M,2}} = {\bar \lambda_{2}}$, Eq.~\ref{App3} can be reduced Eq.\ref{App2}. This formulation includes reproductive potential terms such that the distinct reproductive potential between migrants and nonmigrants eliminates the usefulness of the proposed HS-based estimators (this is also applied to the proposed PO-based estimators). 
 
 \clearpage
 
